# zeshicast

./: .gitignore  ACTION_PLAN.md  BACKLOG.md  Cargo.toml  README.md  build.rs  claude-code-briefing.md  deny.toml  flake.nix  shell.nix
.github/workflows/: rust.yml
design_handoff_zeshicast/: README.md  zeshicast-gtk4.css  zeshicast.html
docs/: DESIGN.md  design-system-plan.md  development.md  linux-command-center-plan.md  privacy.md  raycast-linux-features.md  security.md  vicinae-parity-roadmap.md
packaging/: zeshicast-gtk-daemon.desktop  zeshicast-gtk.desktop  zeshicast-gtk.service
packaging/examples/commands/: dict.toml  docker-ps.toml  git-log.toml  github.toml  weather.toml
scripts/: install-user.sh
src/: action.rs  app.rs  config.rs  extensions.rs  lib.rs  main.rs  placeholders.rs
src/search/: apps.rs  calculator.rs  clipboard.rs  commands.rs  emoji.rs  files.rs  media.rs  mod.rs  named_values.rs  notifications.rs  processes.rs  scripts.rs  ssh.rs  system.rs  web.rs  windows.rs
src/services/: app_watcher.rs  audio.rs  battery.rs  compositor.rs  local_ai.rs  media.rs  mod.rs  network.rs  notifications.rs  poll_cache.rs  storage.rs  system_stats.rs  thermal.rs
src/ui/: fonts.rs  forms.rs  icons.rs  launcher.rs  launcher_helpers.rs  launcher_views.rs  markdown.rs  mod.rs  navigation.rs  notify_server.rs  osd.rs  panels.rs  preferences.rs  status_strip.rs  style.rs  views.rs  widgets.rs
