[package]
name = "zeshicast"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
gui = ["dep:gtk"]
layer-shell = ["gui"]

[dependencies]
chrono = "0.4.44"
gtk = { package = "gtk4", version = "0.11.3", optional = true, features = ["v4_6"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0.149"
toml = "1.1.2"
ureq = { version = "2", features = ["json"] }

[[bin]]
name = "zeshicast"
path = "src/main.rs"

[[bin]]
name = "zeshicast-gtk"
path = "src/bin/zeshicast-gtk.rs"
required-features = ["gui"]
